--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "7.10.0",
     "@prisma/client": "^4.11.0",
     "apollo-server": "^3.11.1",
+    "envalid": "^7.3.1",
     "graphql": "^16.6.0",
+    "graphql-middleware": "^6.1.33",
+    "graphql-shield": "^7.6.5",
     "nexus": "^1.3.0",
-    "nexus-prisma": "^1.0.4"
+    "nexus-prisma": "^1.0.4",
+    "zod": "^3.21.0"
   }
 }
